Alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ body {
 .service-request {
     color: rgba(232, 240, 240, 1);
     background-color: rgba(232, 240, 255, 0.3);
-    padding: 1px;
+    padding: 10px;
     margin: 10px;
     border-radius: 10px;
 }
@@ -154,8 +154,6 @@ body {
 
 a {
     color: rgba(232, 240, 240, 1);
-    padding: 10px;
-    margin: 15px;
 }
 
 a:hover {
